tests/error/comptime/check_slice_construction06.bz
function test()
{
	(consteval {
		let i = 0;
		__builtin_slice_from_ptrs(&i + 1, &i);
	});
}
